--- a/pags/servicios.html
+++ b/pags/servicios.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header id="unique" >
-        <div class="container">
+        <div class="containerx">
             <nav>
                 <ul class="menu-container">
                     <div><a id="index" href="../index.html"><img class="logopag" src="../imgs/logo.png" title="Inicio"></a></div>
