--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -13,20 +13,40 @@
     <link rel="icon" href="../imgs/icontab.ico.jpg">
 </head>
 <body>
-    <header id="unique">
-        <div class="containerx">
-            <nav>
-                <ul class="menu-container">
-                    <div><a id="index" href="../index.html"><img class="logopag" src="../imgs/logo.png" title="Inicio"></a></div>
-                    <li class="inicio"><a href="../index.html">INICIO</a></li>  
-                    <li class="nosotros"><a href="nosotros.html">NOSOTROS</a></li> 
-                    <li class="proyectos"><a href="proyectos.html">PROYECTOS</a></li>
-                    <li class="servicios"><a href="servicios.html">SERVICIOS</a></li>
-                    <li class="contacto"><a href="contacto.html">CONTACTO</a></li>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:black">
+            <a href="../index.html" class="navbar-brand text-white">
+                <img src="../imgs/logo.png" height="50px" title="Inicio">
+                Code Engineers Group
+            </a>
+            <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a href="../index.html" class="nav-link font-weight-bold">INICIO</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="nosotros.html" class="nav-link font-weight-bold">NOSOTROS</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active font-weight-bold" data-toggle="dropdown" data-target="desplegable" href="./pags/proyectos.html">PROYECTOS</a>
+                        <div class="dropdown-menu bg-dark">
+                            <a class="dropdown-item text-white bg-dark" href="proyectos.html">Plantillas de Muestra</a>
+                            <a class="dropdown-item text-white bg-dark" href="proyectos.html">Trabajos Realizados</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="servicios.html" class="nav-link font-weight-bold">SERVICIOS</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="contacto.html" class="nav-link font-weight-bold">CONTACTO</a>
+                    </li>
                 </ul>
-            </nav>
-        </div>        
-    </header>  
+            </div>
+        </nav>        
+    </header>
             </div>
         <div>
             <h2 class="titulo-contacto">Contacto</h2>
