--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -7,64 +7,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Electrolize&family=Michroma&family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../main.css">
     <title>CEG - Nosotros</title>
     <link rel="icon" href="../imgs/icontab.ico.jpg">
 </head>
 <body>
-    <header id="unique">
-        <div class="container">
-            <nav>
-                <ul class="menu-container">
-                    <div><a id="index" href="../index.html"><img class="logopag" src="../imgs/logo.png" title="Inicio"></a></div>
-                    <li class="inicio"><a href="../index.html">INICIO</a></li>  
-                    <li class="nosotros"><a href="nosotros.html">NOSOTROS</a></li> 
-                    <li class="proyectos"><a href="proyectos.html">PROYECTOS</a></li>
-                    <li class="servicios"><a href="servicios.html">SERVICIOS</a></li>
-                    <li class="contacto"><a href="contacto.html">CONTACTO</a></li>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:black">
+            <a href="../index.html" class="navbar-brand text-white">
+                <img src="../imgs/logo.png" height="50px" title="Inicio">
+                Code Engineers Group
+            </a>
+            <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a href="../index.html" class="nav-link font-weight-bold">INICIO</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="nosotros.html" class="nav-link font-weight-bold">NOSOTROS</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active font-weight-bold" data-toggle="dropdown" data-target="desplegable" href="proyectos.html">PROYECTOS</a>
+                        <div class="dropdown-menu bg-dark">
+                            <a class="dropdown-item text-white bg-dark" href="proyectos.html">Plantillas de Muestra</a>
+                            <a class="dropdown-item text-white bg-dark" href="proyectos.html">Trabajos Realizados</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="servicios.html" class="nav-link font-weight-bold">SERVICIOS</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="contacto.html" class="nav-link font-weight-bold">CONTACTO</a>
+                    </li>
                 </ul>
-            </nav>
-        </div>        
-    </header>  
+            </div>
+        </nav>        
+    </header>
             </div>
         <div>
             <h2 class="titulo-contacto">Contacto</h2>
         </div>
-    <section class="formulario-contacto">
-        <form id="form-container" action="#" method="post" enctype="application/x-www-form-urlencoded">
-            <div class="formulario-contacto__nombre">
-                <label for="nombre">Nombre</label>
-                <input id="nombre" type="text" name="nombre" placeholder="Ingresa tu nombre">
-            </div>
-            <div class="formulario-contacto__apellido">
-                <label for="apellido">Apellido</label>
-                <input id="apellido" type="text" name="apellido" placeholder="Ingresa tu apellido">
-            </div>
-            <div class="formulario-contacto__telefono">
-                <label for="telefono">Numero de telefono</label>
-                <input id="telefono" type="number" name="numero de telefono" placeholder="Ingresa tu numero de telefono">
-            </div>
-            <div class="formulario-contacto__fecha-nacimiento">
-                <label for="birthday">Fecha de Nacimiento:</label>
-                <input type="date" id="date" name="Fecha de nacimiento">
-            </div>
-            <div class="formulario-contacto__email">
-                <label for="email">Correo electronico</label>
-                <input id="email" type="text" name="email" placeholder="e-mail.com">
-            </div>
-            <h2 class="titulo-dejanos">Dejanos un Mensaje</h2>
-            <div class="dejar-mensaje">
-                <label for="mensaje"></label>
-                <textarea name="mensaje" id="dejar-mensaje__area" cols="30" rows="10"></textarea>
-            </div>
-            <div class="enviar">
-                <input class="enviar"type="checkbox"> Acepto Términos y Condiciones <br>
-                <input type="submit" value="Enviar Mis Datos">
-            </div>
-            <h2 class="titulo-aprende">Aprende o Programa con Nosotros</h2>
-            <div class="container-select">
+        <section class="container">
+            <div class="row">
+                <div class="col-6">
+                    <form action="">
+                        <div class="form-group">
+                            <label for="" class="col-2 col-form-label">Nombre:</label>
+                            <input type="text" placeholder="Escribe tu nombre aquí" class="form-control col-10">
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-2 col-form-label">Apellido</label>
+                            <input type="text" name="apellido" placeholder="Escribe tu apellido aquí" class="form-control col-10">
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-2 col-form-label">Teléfono</label>
+                            <input type="number" name="numero de telefono" placeholder="Escribe tu numero de telefono aquí" class="form-control col-10">
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-22 col-form-label">Fecha de Nacimiento:</label>
+                            <input type="date" name="Fecha de nacimiento" class="form-control col-10">
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-2 col-form-label">E-mail:</label>
+                            <input type="email" placeholder="Escribe tu e-mail aquí" class="form-control col-10">
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-22 col-form-label">Déjanos un Mensaje</label>
+                            <textarea class="form-control col-10" cols="10" rows="5"></textarea>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                              <input type="checkbox" class="form-check-input" value="">Acepto Términos y Condiciones
+                            </label>
+                          </div>
+                        <div class="form-group">
+                            <button type="button" class="btn btn-success">Enviar Mis Datos</button>
+                        </div>
+
+
+                        <h2 class="titulo-aprende">Aprende o Programa con Nosotros</h2>
+            <div class="form-group">
                 
-                <select id="select" name="Aprende o Programa con Nosotros">
+                <select class="form-control col-10" name="Aprende o Programa con Nosotros">
                     <option value="" hidden>Selecciona una opción</option>
                     <option value="HTML5+CSS">HTML5+CSS</option>
                     <option value="JavasScript">JavasScript</option>
@@ -73,7 +101,13 @@
                     <option value="Quiero ser parte de CDG">Quiero ser parte de CEG</option>
                 </select>
             </div>
-        </form>
+
+                    </form>
+
+                </div>
+
+            </div>
+        </section>
         <section class="google-maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26837.36870759911!2d-77.65208264498087!3d0.8309583072675951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13
             .1!3m3!1m2!1s0x8e296bc00ad315e1%3A0xd91095448d2ee3d7!2sCentro%20Comercial%20Gran%20Plaza%20Ipiales!5e0!3m2!1ses!2sco!4v1647822817480!5m2!1ses!2sco"
@@ -88,7 +122,10 @@
             <p class="lineasdecontacto__street2">Edificio ABC</p>
             <p class="lineasdecontacto__street3">Ipiales-Nariño-Colombia</p>
             <img class="street" src="../imgs/ubicacion.png" alt="Ubicación">
-        </div>
+            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>        </div>
+</body>
         <footer class="footer-contact" >
             <div id="redes2">
                 <a href="https://www.instagram.com/alexanderwolftrader/"><img src="../imgs/instagram.png" title="Instagram" alt="Instagram"></a>
