--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:black">
             <a href="./index.html" class="navbar-brand text-white">
                 <img src="./imgs/logo.png" height="50px" title="Inicio">
-                Code Engineers Group
+                <span class="texto-bar">
+                    Code Engineers Group
+                </span>
             </a>
             <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
