--- a/pags/nosotros.html
+++ b/pags/nosotros.html
@@ -17,7 +17,9 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:black">
             <a href="../index.html" class="navbar-brand text-white">
                 <img src="../imgs/logo.png" height="50px" title="Inicio">
-                Code Engineers Group
+                <span class="texto-bar">
+                    Code Engineers Group
+                </span>
             </a>
             <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -47,8 +49,6 @@
             </div>
         </nav>        
     </header>
-
-
     <section>
         <div class="jumbotron jumbotron-fluid">                    
             <h1 class="display-4 nosotros__titulo" >¿Quiénes Somos?</h1>
@@ -58,7 +58,7 @@
             <a href="https://www.coderhouse.com.co/"><img id="coderlogo" src="../imgs/coderlogo.png" alt="CODERHOUSE"></a>
         </div>
         <div class="jumbotron jumbotron-fluid">
-            <div class="container">
+            <div class="container-fluid">
               <h1 class="display-4 nosotros__titulo2">¿Nuestra Trayectoria?</h1>
               <p class="nosotros__p2">Empezamos siendo personas autodidactas y empíricas en el diseño web, hicimos varios prototipos y las compartíamos en redes, pasado un tiempo las personas miraron nuestra calidad y empezamos a ser contratados; algunas ofertas de trabajo fueron en equipo y otras como trabajos individuales. Un día decidimos juntar 100% nuestro talento y nuestros contratos, así mismo surgió la necesidad de aprender más lenguajes de programación y empezamos a trabajar en empresas para programar procesos automatizados o trabajos que para el humano a veces es impreciso de realizar. <br> <br>
                 Dominamos lenguajes de desarrollo de software, apps para dispositivos móviles, tareas remotas, vigilancia con IA para hogares y empresas, programación de dispositivos para casas inteligentes y algunas otras que sin dejar de ser importantes nos brindan el reconocimiento y la calidad de nuestro trabajo.</p>
