--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Electrolize&family=Michroma&family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <title>CEG - Nosotros</title>
+    <title>CEG - Contacto</title>
     <link rel="icon" href="../imgs/icontab.ico.jpg">
 </head>
 <body>
@@ -81,15 +81,7 @@
                         <div class="form-group">
                             <label for="" class="col-22 col-form-label">Déjanos un Mensaje</label>
                             <textarea class="form-control col-10" cols="10" rows="5"></textarea>
-                        </div>
-                        <div class="form-check">
-                            <label class="form-check-label">
-                              <input type="checkbox" class="form-check-input" value="">Acepto Términos y Condiciones
-                            </label>
-                          </div>
-                        <div class="form-group">
-                            <button type="button" class="btn btn-success">Enviar Mis Datos</button>
-                        </div>
+                        </div>                        
                         <h2 class="titulo-aprende">Aprende o Programa con Nosotros</h2>
                         <div class="form-group">
                             <select class="form-control col-10" name="Aprende o Programa con Nosotros">
@@ -100,6 +92,14 @@
                                 <option value="Python">Python</option>
                                 <option value="Quiero ser parte de CDG">Quiero ser parte de CEG</option>
                             </select>
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                              <input type="checkbox" class="form-check-input" value="">Acepto Términos y Condiciones
+                            </label>
+                          </div>
+                        <div class="form-group">
+                            <button type="button" class="btn btn-success">Enviar Mis Datos</button>
                         </div>
                     </form>
                 </div>
