--- a/pags/nosotros.html
+++ b/pags/nosotros.html
@@ -50,14 +50,14 @@
         </nav>        
     </header>
     <section>
-        <div class="jumbotron jumbotron-fluid">                    
-            <h1 class="display-4 nosotros__titulo" >¿Quiénes Somos?</h1>
+        <div class="jumbotron jumbotron-fluid" style="background-color: black;">                    
+            <h1 class="display-4 nosotros__titulo">¿Quiénes Somos?</h1>
             <p class="nosotros__p lead">Somos un grupo de jóvenes emprendedores Colombianos, apasionados por nuestra profesión como Desarrolladores Web y Programadores para Empresas. <br> Todos fuimos formados y certificados por <strong><a id="link" href="https://www.coderhouse.com.co/">CODERHOUSE</a></strong>, una de las más reconocidas plataformas de e-Learning en Programación.</p>
         </div>
         <div id="logo__container">
             <a href="https://www.coderhouse.com.co/"><img id="coderlogo" src="../imgs/coderlogo.png" alt="CODERHOUSE"></a>
         </div>
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid" style="background-color: black;">
             <div class="container-fluid">
               <h1 class="display-4 nosotros__titulo2">¿Nuestra Trayectoria?</h1>
               <p class="nosotros__p2">Empezamos siendo personas autodidactas y empíricas en el diseño web, hicimos varios prototipos y las compartíamos en redes, pasado un tiempo las personas miraron nuestra calidad y empezamos a ser contratados; algunas ofertas de trabajo fueron en equipo y otras como trabajos individuales. Un día decidimos juntar 100% nuestro talento y nuestros contratos, así mismo surgió la necesidad de aprender más lenguajes de programación y empezamos a trabajar en empresas para programar procesos automatizados o trabajos que para el humano a veces es impreciso de realizar. <br> <br>
@@ -65,14 +65,13 @@
             </div>
         </div>
     </section>
-
     <footer>
         <div class="copyright2">
             <h6 class="copyright--uppercase2">©Copyright All Rights Reserved - Code Engineers Group 2022</h6>
         </div>
-        </footer>
+    </footer>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 </html>
