--- a/pags/servicios.html
+++ b/pags/servicios.html
@@ -56,7 +56,7 @@
                 <ol class="tarjeta1">
                     <h3><li>Frontend - Backend</li></h3>
                         <ul>
-                            <li>Desarrolo Web (HTML5 - CSS3)</li>
+                            <li>Desarrollo Web (HTML5 - CSS3)</li>
                             <li>JavasScript</li>
                             <li>React Js</li>
                             <li>Programación Backend (Node.js - MongoDB)</li>
