--- a/pags/servicios.html
+++ b/pags/servicios.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO===================================================-->
+    <meta name="description" content="Ofrecemos a nuestro publico la posibildad de aprender y ser parte de nuestro equipo de programadores, servir y enseñar nuestra pasion nos hace mas profesionales">
+    <meta name= "keywords" content="PROGRAMACION, DISEÑO, WEB, PYTHON, HTML, CSS, JS, JAVASCRIPT, CODERHOUSE">
+
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Electrolize&family=Michroma&family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <title>CEG - Servicios</title>
     <link rel="icon" href="../imgs/icontab.ico.jpg">
+    <title>CEG - Servicios</title>
 </head>
 <body>
     <header>
@@ -50,8 +55,9 @@
         </nav>        
     </header>    
     <section class="container-tarjetas" >
-        <h1 id="services">Nuestros Servicios</h1>
-        <h2 id="titulo-center">Diseño y Programación Web</h2>
+        <h2 id="services">Nuestros Servicios</h2>
+        <!-- SEO===================================================-->
+        <h1 id="titulo-center">Diseño y Programación Web</h1>
             <a id="tarjeta1__lista1" href="#">
                 <ol class="tarjeta1">
                     <h3><li>Frontend - Backend</li></h3>
@@ -69,10 +75,12 @@
                         </ul>
                 </ol>
             </a>
-        <h2 id="titulo-center2">Programación Especializada</h2>
+        <!-- SEO===================================================-->
+        <h1 id="titulo-center2">Programación Especializada</h1>
             <a id="tarjeta2__lista2" href="#">
                 <ol class="tarjeta2">
-                    <h3><li>Desarrollo de Aplicaciones Web</li></h3>
+                    <!-- SEO===================================================-->
+                    <h1><li>Desarrollo de Aplicaciones Web</li></h1>
                         <ul>
                             <li>JavasScript</li>
                             <li>Angular</li>
@@ -83,7 +91,8 @@
                             <li>JavasScript</li>
                             <li>Vue Js</li>
                         </ul>
-                    <h3><li>Programación de Software</li></h3>
+                    <!-- SEO===================================================-->
+                    <h1><li>Programación de Software</li></h1>
                         <ul>
                             <li>Python</li>
                         </ul>
