--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO===================================================-->
+    <meta name="description" content="Somos los mejores creando sitios en Internet, somos especialistas en el Desarrollo Web y dominamos los Lenguajes de Programación más Populares en el mundo!">
+    <meta name= "keywords" content="PROGRAMACION, DISEÑO, WEB, PYTHON, HTML, CSS, JS, JAVASCRIPT, CODERHOUSE">
+    
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Electrolize&family=Michroma&family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Code Engineers Group</title>
     <link rel="icon" href="./imgs/icontab.ico.jpg">
+    <title>Code Engineers Group</title>
 </head>
 <body>
     <header>
@@ -51,6 +56,7 @@
     </header>
     <section class="tiulo-container">
         <h4 class="titulo__pag">Code Engineers Group</h4>
+        <!-- SEO===================================================-->
         <h1 class="titulo__subpag">Diseño Web y Programación</h1>
     </section>
     <footer class="footer">
