--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description" content="Contactanos! Hablaremos de negocios y seguramente siempre llegaremos a un buen acuerdo!>
+    <meta name="description" content="Contactanos! Hablaremos de negocios y seguramente siempre llegaremos a un buen acuerdo!">
     <meta name= "keywords" content="PROGRAMACION, DISEÑO, WEB, PYTHON, HTML, CSS, JS, JAVASCRIPT, CODERHOUSE">
-
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Electrolize&family=Michroma&family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="icon" href="../imgs/icontab.ico.jpg">
+    <link rel="icon" href="../imgs/icontab.ico.jpg">    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>CEG - Contacto</title>
 </head>
 <body>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="form-group">
                             <label for="" class="col-2 col-form-label">E-mail:</label>
-                            <input type="email" placeholder="Escribe tu e-mail aquí" class="form-control col-10">
+                            <input type="email" name= "email" placeholder="Escribe tu e-mail aquí" class="form-control col-10">
                         </div>
                         <div class="form-group">
                             <label for="" class="col-22 col-form-label">Déjanos un Mensaje</label>
@@ -103,7 +103,7 @@
                             </label>
                           </div>
                         <div class="form-group">
-                            <button type="button" class="btn btn-success">Enviar Mis Datos</button>
+                            <button type="button" class="btn" id="other">Enviar Mis Datos</button>
                         </div>
                     </form>
                 </div>
@@ -127,11 +127,7 @@
             .1!3m3!1m2!1s0x8e296bc00ad315e1%3A0xd91095448d2ee3d7!2sCentro%20Comercial%20Gran%20Plaza%20Ipiales!5e0!3m2!1ses!2sco!4v1647822817480!5m2!1ses!2sco"
              width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section> 
-            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>        </div>
-</body>
-        <footer class="footer-contact" >
+            <footer class="footer-contact" >
             <div id="redes2">
                 <a href="https://www.instagram.com/alexanderwolftrader/"><img src="../imgs/instagram.png" title="Instagram" alt="Instagram"></a>
                 <a href="https://github.com/MenaCoder"><img src="../imgs/github.png" title="GitHub" alt="GitHub"></a>
@@ -140,5 +136,10 @@
             <div id="copyright4">
                 <h6 class="copyright--uppercase4">©Copyright All Rights Reserved - Code Engineers Group 2022</h6>
             </div>
-            </footer>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script> 
+</body>
+        
 </html>
