--- a/pags/servicios.html
+++ b/pags/servicios.html
@@ -5,50 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- SEO===================================================-->
     <meta name="description" content="Ofrecemos a nuestro publico la posibildad de aprender y ser parte de nuestro equipo de programadores, servir y enseñar nuestra pasion nos hace mas profesionales">
     <meta name= "keywords" content="PROGRAMACION, DISEÑO, WEB, PYTHON, HTML, CSS, JS, JAVASCRIPT, CODERHOUSE">
-
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Electrolize&family=Michroma&family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../imgs/icontab.ico.jpg">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>CEG - Servicios</title>
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:black">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark navy" style="background-color:black">
             <a href="../index.html" class="navbar-brand text-white">
                 <img src="../imgs/logo.png" height="50px" title="Inicio">
                 <span class="texto-bar">
                     Code Engineers Group
                 </span>
             </a>
+            <button class="onoff" id="onoff">
+                <span><ion-icon name="moon-outline"></ion-icon></span>
+                <span><ion-icon name="sunny-outline"></ion-icon></span>               
+            </button>
             <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="../index.html" class="nav-link font-weight-bold">INICIO</a>
+                        <a href="../index.html" class="nav-link font-weight-bold linky">INICIO</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="nosotros.html" class="nav-link font-weight-bold">NOSOTROS</a>
+                        <a href="nosotros.html" class="nav-link font-weight-bold linky">NOSOTROS</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active font-weight-bold" data-toggle="dropdown" data-target="desplegable" href="proyectos.html">PROYECTOS</a>
+                        <a class="nav-link dropdown-toggle active font-weight-bold linky" data-toggle="dropdown" data-target="desplegable" href="proyectos.html">PROYECTOS</a>
                         <div class="dropdown-menu bg-dark">
                             <a class="dropdown-item text-white bg-dark" href="proyectos.html">Plantillas de Muestra</a>
                             <a class="dropdown-item text-white bg-dark" href="proyectos.html">Trabajos Realizados</a>
                         </div>
                     </li>
                     <li class="nav-item active">
-                        <a href="servicios.html" class="nav-link font-weight-bold">SERVICIOS</a>
+                        <a href="servicios.html" class="nav-link font-weight-bold linky">SERVICIOS</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="contacto.html" class="nav-link font-weight-bold">CONTACTO</a>
+                        <a href="contacto.html" class="nav-link font-weight-bold linky">CONTACTO</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +59,6 @@
     </header>    
     <section class="container-tarjetas" >
         <h2 id="services">Nuestros Servicios</h2>
-        <!-- SEO===================================================-->
         <h1 id="titulo-center">Diseño y Programación Web</h1>
             <a id="tarjeta1__lista1" href="#">
                 <ol class="tarjeta1">
@@ -75,11 +77,9 @@
                         </ul>
                 </ol>
             </a>
-        <!-- SEO===================================================-->
         <h1 id="titulo-center2">Programación Especializada</h1>
             <a id="tarjeta2__lista2" href="#">
                 <ol class="tarjeta2">
-                    <!-- SEO===================================================-->
                     <h1><li>Desarrollo de Aplicaciones Web</li></h1>
                         <ul>
                             <li>JavasScript</li>
@@ -91,7 +91,6 @@
                             <li>JavasScript</li>
                             <li>Vue Js</li>
                         </ul>
-                    <!-- SEO===================================================-->
                     <h1><li>Programación de Software</li></h1>
                         <ul>
                             <li>Python</li>
@@ -110,6 +109,7 @@
         <h6 class="copyright--uppercase3">©Copyright All Rights Reserved - Code Engineers Group 2022</h6>
     </div>
     </footer>
+        <script src="/js/main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
