--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -25,7 +25,7 @@
                     Code Engineers Group
                 </span>
             </a>
-            <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
+            <button class="navbar-toggler burger" data-target="#menu" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="menu">
@@ -64,7 +64,7 @@
                     <form action="">
                         <div class="form-group">
                             <label for="" class="col-2 col-form-label">Nombre:</label>
-                            <input type="text" placeholder="Escribe tu nombre aquí" class="form-control col-10">
+                            <input type="text" name="nombre" placeholder="Escribe tu nombre aquí" class="form-control col-10">
                         </div>
                         <div class="form-group">
                             <label for="" class="col-2 col-form-label">Apellido</label>
@@ -99,11 +99,11 @@
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                              <input type="checkbox" class="form-check-input" value="">Acepto Términos y Condiciones
+                              <input type="checkbox" name="acepto"class="form-check-input" value="">Acepto Términos y Condiciones
                             </label>
                           </div>
                         <div class="form-group">
-                            <button type="button" class="btn" id="other">Enviar Mis Datos</button>
+                            <button type="button" name="enviar-datos" class="btn" id="other">Enviar Mis Datos</button>
                         </div>
                     </form>
                 </div>
