--- a/pags/nosotros.html
+++ b/pags/nosotros.html
@@ -29,7 +29,7 @@
                 <span><ion-icon name="moon-outline"></ion-icon></span>
                 <span><ion-icon name="sunny-outline"></ion-icon></span>               
             </button>
-            <button class="navbar-toggler" data-target="#menu" data-toggle="collapse" type="button">
+            <button class="navbar-toggler burger" data-target="#menu" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="menu">
